Fix text overflow bug in IE

--- a/_assets/sass/2_layout.scss
+++ b/_assets/sass/2_layout.scss
@@ -24,6 +24,10 @@ body {
 	#sidebar {
 		align-items: center;
 		width: 100%;
+
+		p {
+			text-align: center;
+		}
 	}
 }
 
@@ -35,5 +39,9 @@ body {
 	#sidebar {
 		width: 280px;
 		align-items: flex-start;
+
+		p {
+			text-align: left;
+		}
 	}
 }
