--- a/_assets/sass/2_sidebar.scss
+++ b/_assets/sass/2_sidebar.scss
@@ -27,7 +27,7 @@
 
 	p {
 		color: $tint-color;
-		font-size: 14;
+		font-size: 14px;
 
 		a {
 			color: inherit;
